# openpowerlink-py

./: .gitattributes  .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
native/oplkwrap/: CMakeLists.txt  oplkwrap.c  oplkwrap.h
scripts/: build_in_container.sh  build_stack.sh  build_wheels.py  build_windows.ps1  build_wrapper.sh  cndiag.py  ctest.c  ctest3.c  diag.py  dump_cdc.py  fix_cdc.py  patch_aarch64.sh  plk_sniff.py
src/openpowerlink/: __init__.py  _loader.py  _wrap.py  api.py  cli.py  scaling.py  stack.py  xap.py
src/openpowerlink/_native/: README.md
tests/: test_api.py  test_scaling.py  test_wait_operational.py  test_xap.py
