# openpowerlink-py — self-contained Python package that ships the compiled
# openPOWERLINK userspace Managing-Node stack, so a target machine needs nothing
# pre-installed to talk to B&R POWERLINK peripherals from userspace.
[project]
name = "openpowerlink"
version = "0.1.0"
description = "Self-contained openPOWERLINK userspace MN stack for Python (bundled native binaries)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-2-Clause" }
# The core (loader / stack / api / cli) is pure standard library + ctypes.
# The native binaries are bundled per platform under src/openpowerlink/_native.
dependencies = []

[project.optional-dependencies]
# PySide6 example GUI only: `uv sync --extra gui`
gui = ["pyside6>=6.6"]
dev = ["pytest>=8.0"]

[project.scripts]
pl = "openpowerlink.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openpowerlink"]
# The bundled native binaries (*.so/*.dll) are data files inside the package.
artifacts = ["src/openpowerlink/_native/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
